# skill_tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yaml  pyproject.toml  schema.yml
.github/workflows/: gh_actions_tests.yaml
common/models/: base.py
project/: __init__.py  auth.py  schema.py  settings.py  urls.py  views.py
projects/: models.py  serializers.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_deleted_at.py
skills/: models.py  serializers.py  views.py
skills/migrations/: 0001_initial.py  0002_alter_skill_deleted_at.py
tasks/: models.py  serializers.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_deleted_at.py  0003_remove_taskattachment_file_url_and_more.py
tests/: conftest.py
tests/models/: test_projects.py  test_skills.py  test_tasks.py  test_users.py
users/: models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_deleted_at.py  0002_alter_user_id.py  0003_alter_userskill_level_alter_userskill_xp.py  0004_rename_name_user_username.py
users/repositories/: user_repository.py
users/services/: user_service.py
