[project]
name = "skill-tracker-app"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandrSmolyachkovGH",email = "alexandr.smolyachkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
